fixed bugs in initial commit

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <script type="text/javascript">
 	function onClick()
 	{
-		var text=document.getElementById('attacks').value;
-		document.getElementById("scriptOutput").innerText = fancyResolve(text);
+		var d=parseInt( document.getElementById('attacks').value )
+		document.getElementById("scriptOutput").innerText = fancyResolve(d);
 	}
 </script>
 
