fixed all values defaulting to 99

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
             document.getElementById("scriptOutput").innerText = fancyResolve(a, h, w, r, d, s, hm, wm, sm, hrr, wrr, srr, ward);
         }
     </script>
+
+    <footer>
+        <font size="2">
+            <p>Copyright &copy; James Ganis</p>
+        </font>
+    </footer>
 </body>
 
 </html>
