--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <title>Age of Sigmulator</title>
+</head>
+
 <body>
+    <!--name-->
+    <div><font size="6">Age of Sig<span style="color: blue">m</span><span style="color: red">u</span>lator</font></div>
+    <br />
     <!-- basic -->
     <label for="models">models</label>
     <input type="text" id="models" size="3" value="10" />
