--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <!-- buttons -->
     <button onclick="onSigmulate()" style="font-size : 12px; width: 80px; height: 40px;">Sigmulate</button>
     <button onclick="onCompare()" style="font-size : 12px; width: 80px; height: 40px;">Compare</button>
+    <button onclick="onCompare()" style="font-size : 12px; width: 80px; height: 40px;">Add To Last</button>
 
     <!-- output -->
     <font size="3">
@@ -132,7 +133,7 @@
             return parseInt(s);
         }
 
-        function onSigmulate(compare = false) {
+        function onSigmulate(compare = false, sum = false) {
             let a = diceParseInt(document.getElementById('attacks').value);
             let h = parseInt(document.getElementById('tohit').value);
             let w = parseInt(document.getElementById('towound').value);
@@ -158,6 +159,8 @@
 
             if (compare)
                 document.getElementById("scriptOutput").innerHTML = actuallyCompare(attack, comparatives[comparatives.length - 1]);
+			else if (sum)
+                document.getElementById("scriptOutput").innerHTML = getSumDamageString(attack, comparatives[comparatives.length - 1]);
             else {
                 document.getElementById("scriptOutput").innerHTML = fancyPrint(atLeast(attack));
                 comparatives = []
