70% estimtaor wont persist if no damage over 70%

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 					document.getElementById("confidenceEstimate").innerHTML = "70% chance of at least <span style=\"color: red\"><font size=\"5\">"+dmg+"</span></font> wound(s).";
 					break;
 				}
+				document.getElementById("confidenceEstimate").innerHTML = "";
 			}
 			
 
