--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Age of Sigmulator</title>
 </head>
 
-<body>
+<body bgcolor='#191A1C' text='#D3D3D3'>
     <!--name-->
     <div><font size="6">Age of Sig<span style="color: blue">m</span><span style="color: red">u</span>lator</font></div>
     <br />
