--- a/index.html
+++ b/index.html
@@ -2,33 +2,96 @@
 <html lang="en">
 
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="style.css"> -->
+
     <title>Age of Sigmulator</title>
+	
+	<style>
+		body
+		{
+			font-family: 'Abel', serif;
+		}
+
+		input[type='text']
+		{
+			font-family: 'Abel', serif;
+			font-size: 18px;
+			color: #33F7DB;
+
+			background: transparent;
+			border: none;
+			outline: none;
+			
+			position: relative;
+			top: 1px;
+			left: 2px;
+			
+			width:40px;
+		}
+		
+		select
+		{
+			font-family: 'Abel', serif;
+			font-size: 18px;
+			color: #33F7DB;
+
+			background: transparent;
+			border: none;
+			outline: none;
+		}
+		
+		option
+		{
+			font-family: 'Abel', serif;
+			font-size: 18px;
+			color: #55F7DB;
+
+			background: #35342F;
+			border: none;
+			outline: none;
+			
+        box-shadow:none; 
+        background-image: none;
+		}
+		
+		
+		span 
+		{
+			display: inline-block;
+			width: 100px;
+		}
+		
+    </style>
 </head>
 
-<body bgcolor='#191A1C' text='#D3D3D3'>
+<body bgcolor='#35342F' text='#FEF7DB'>
     <!--name-->
-    <div><font size="6">Age of Sig<span style="color: blue">m</span><span style="color: red">u</span>lator</font></div>
+    <div><font size="6">Age of Sigmulator</font></div>
     <br />
+	
+	
     <!-- basic -->
-    <label for="models">models</label>
+    <label for="models">models: </label>
     <input type="text" id="models" size="3" value="10" />
 
-    <label for="attacks">attacks</label>
+    <label for="attacks">attacks: </label>
     <input type="text" id="attacks" size="3" value="1" />
 
-    <label for="tohit">hit</label>
+    <label for="tohit">hit: </label>
     <input type="text" id="tohit" size="3" value="4" />
 
-    <label for="towound">wound</label>
+    <label for="towound">wound: </label>
     <input type="text" id="towound" size="3" value="4" />
 
-    <label for="rend">rend</label>
+    <label for="rend">rend: </label>
     <input type="text" id="rend" size="3" value="0" />
 
-    <label for="damage">damage</label>
+    <label for="damage">damage: </label>
     <input type="text" id="damage" size="3" value="1" />
 
-    <label for="tosave">save</label>
+    <label for="tosave">save: </label>
     <input type="text" id="tosave" size="3" value="4" />
 
     <br />
